[package]
name = "errmeta_derive"
version = "0.1.0"
edition = "2021"
description = "A proc macro for adding metadata on errors"
license = "MIT"
authors = ["Amir Nagri <amir.nagri@gmail.com>"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["full"] }
convert_case = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
rstest = { workspace = true }
strum = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
trybuild = { workspace = true }

[[test]]
name = "trybuild"
path = "tests/trybuild.rs"
