[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"

[dependencies]


[dev-dependencies]
llamacpp_sys = { workspace = true }
objs = { workspace = true, features = ["test-utils"] }
llamacpp_rs = { workspace = true, features = ["test-utils"] }
server_app = { workspace = true, features = ["test-utils"] }
services = { workspace = true, features = ["test-utils"] }
server_core = { workspace = true, features = ["test-utils"] }

anyhow = { workspace = true }
fs_extra = { workspace = true }
rstest = { workspace = true }
libloading = { workspace = true }
mockall = { workspace = true }
pretty_assertions = { workspace = true }
serde_json = { workspace = true }
serial_test = { workspace = true }
tokio = { workspace = true, features = ["full"] }
rand = { workspace = true }
reqwest = { workspace = true }
sqlx = { workspace = true, features = [
  "runtime-tokio",
  "sqlite",
  "macros",
  "migrate",
  "chrono",
] }
tempfile = { workspace = true }

[lints.rust]
unexpected_cfgs = { level = "allow" }
