[package]
name = "integration-tests"
version = "0.0.46-dev"
edition = "2021"

[dependencies]


[dev-dependencies]
objs = { workspace = true, features = ["test-utils"] }
llama_server_proc = { workspace = true, features = ["test-utils"] }
auth_middleware = { workspace = true, features = ["test-utils"] }
server_app = { workspace = true, features = ["test-utils"] }
services = { workspace = true, features = ["test-utils"] }
server_core = { workspace = true, features = ["test-utils"] }
routes_app = { workspace = true, features = ["test-utils"] }
lib_bodhiserver = { workspace = true, features = ["test-utils"] }

async-openai = { workspace = true }
axum = { workspace = true }
anyhow = { workspace = true }
anyhow_trace = { workspace = true }
dirs = { workspace = true }
dotenv = { workspace = true }
fs_extra = { workspace = true }
pretty_assertions = { workspace = true }
rand = { workspace = true }
rstest = { workspace = true }
time = { workspace = true }
serde_json = { workspace = true }
serial_test = { workspace = true }
tokio = { workspace = true, features = ["full"] }
reqwest = { workspace = true }
sqlx = { workspace = true, features = ["chrono", "runtime-tokio", "sqlite"] }
tempfile = { workspace = true }
tower-sessions = { workspace = true }
jsonwebtoken = { workspace = true }
cookie = { workspace = true }
maplit = { workspace = true }

[lints.rust]
unexpected_cfgs = { level = "allow" }
