[package]
name = "lib_bodhiserver"
version = "0.0.44-dev"
edition = "2021"
build = "build.rs"

[dependencies]
errmeta_derive = { workspace = true }
objs = { workspace = true }
services = { workspace = true }
llama_server_proc = { workspace = true }
commands = { workspace = true }
server_core = { workspace = true }
auth_middleware = { workspace = true }
routes_oai = { workspace = true }
routes_app = { workspace = true }
routes_all = { workspace = true }
server_app = { workspace = true }

derive_builder = { workspace = true }
derive-new = { workspace = true }
include_dir = { workspace = true }
jsonwebtoken = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }

[dev-dependencies]
objs = { workspace = true, features = ["test-utils"] }
services = { workspace = true, features = ["test-utils"] }

anyhow = { workspace = true }
maplit = { workspace = true }
mockall = { workspace = true }
rstest = { workspace = true }
serde_yaml = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }


[features]
test-utils = ["services/test-utils", "objs/test-utils"]
