[package]
name = "lib_bodhiserver"
version = "0.0.52-dev"
edition = "2021"
build = "build.rs"

[dependencies]
errmeta_derive = { workspace = true }
services = { workspace = true }
llama_server_proc = { workspace = true }
server_core = { workspace = true }
routes_app = { workspace = true }
server_app = { workspace = true }

derive_builder = { workspace = true }
derive-new = { workspace = true }
include_dir = { workspace = true }
jsonwebtoken = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sea-orm = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
mcp_client = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }

[dev-dependencies]
services = { workspace = true, features = ["test-utils"] }

anyhow = { workspace = true }
maplit = { workspace = true }
mockall = { workspace = true }
rstest = { workspace = true }
serde_yaml = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }


[features]
default = ["embed-ui"]
embed-ui = []
test-utils = ["services/test-utils"]

[[bin]]
name = "bodhiserver_dev"
path = "src/bin/bodhiserver_dev.rs"
required-features = ["test-utils"]
