[package]
name = "lib_bodhiserver_napi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
lib_bodhiserver = { workspace = true }

napi = { workspace = true, features = ["async", "serde-json"] }
napi-derive = { workspace = true }

[build-dependencies]
napi-build = { workspace = true }
