[package]
name = "llama_server_proc"
version = "0.1.0"
edition = "2021"

[dependencies]
errmeta_derive = { workspace = true }
objs = { workspace = true }

derive_builder = { workspace = true }
include_dir = { workspace = true }
lazy_static = { workspace = true }
portpicker = { workspace = true }
reqwest = { workspace = true, features = ["json", "stream"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true, features = ["attributes"] }

[dev-dependencies]
objs = { workspace = true, features = ["test-utils"] }

anyhow = { workspace = true }
dirs = { workspace = true }
pretty_assertions = { workspace = true }
rstest = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
once_cell = { workspace = true }

[features]
test-utils = []
