[package]
name = "llama_server_proc"
version = "0.1.0"
edition = "2021"

[dependencies]
errmeta_derive = { workspace = true }
objs = { workspace = true }

async-trait = { workspace = true }
derive_builder = { workspace = true }
dirs = { workspace = true, optional = true }
http = { workspace = true, optional = true }
include_dir = { workspace = true }
lazy_static = { workspace = true }
mockall = { workspace = true, optional = true }
portpicker = { workspace = true }
reqwest = { workspace = true, features = ["json", "stream"] }
rstest = { workspace = true, optional = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true, features = ["attributes"] }
url = { workspace = true, optional = true }

[dev-dependencies]
objs = { workspace = true, features = ["test-utils"] }

axum = { workspace = true }
anyhow = { workspace = true }
dirs = { workspace = true }
http = { workspace = true }
mockall = { workspace = true }
pretty_assertions = { workspace = true }
rstest = { workspace = true }
url = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
once_cell = { workspace = true }
reqwest = { workspace = true, features = ["blocking", "json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tempfile = { workspace = true }
fs2 = { workspace = true }

[features]
test-utils = ["dirs", "http", "mockall", "rstest", "url"]
