[package]
name = "llamacpp_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
errmeta_derive = { workspace = true }
objs = { workspace = true }
llamacpp_sys = { workspace = true }

derive_builder = { workspace = true }
dirs = { workspace = true, optional = true }
include_dir = { workspace = true }
libc = { workspace = true }
mockall = { workspace = true, optional = true }
rstest = { workspace = true, optional = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
objs = { workspace = true, features = ["test-utils"] }

anyhow = { workspace = true }
async-openai = { workspace = true }
dirs = { workspace = true }
mockall = { workspace = true }
rstest = { workspace = true }
serde_json = { workspace = true }

[features]
test-utils = ["dirs", "mockall", "rstest"]
