[package]
name = "mcp_client"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true

[dependencies]
async-trait = { workspace = true }
errmeta = { path = "../errmeta" }
errmeta_derive = { path = "../errmeta_derive" }
mockall = { workspace = true, optional = true }
reqwest = { workspace = true }
rmcp = { workspace = true, features = [
  "client",
  "transport-streamable-http-client",
  "transport-streamable-http-client-reqwest",
  "reqwest",
] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
utoipa = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[features]
test-utils = ["mockall"]
