[package]
name = "mcp_client"
version = "0.0.52-dev"
edition = "2021"
rust-version.workspace = true

[dependencies]
async-trait = { workspace = true }
errmeta = { workspace = true }
errmeta_derive = { workspace = true }
mockall = { workspace = true, optional = true }
reqwest = { workspace = true }
rmcp = { workspace = true, features = [
  "client",
  "transport-streamable-http-client",
  "transport-streamable-http-client-reqwest",
  "reqwest",
] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
utoipa = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[features]
test-utils = ["mockall"]
