[package]
name = "objs"
version = "0.1.0"
edition = "2021"

[dependencies]
errmeta_derive = { workspace = true }

axum = { workspace = true, features = ["json"] }
async-openai = { workspace = true }
clap = { workspace = true, features = ["derive"] }
ctor = { workspace = true, optional = true }
derive_builder = { workspace = true }
dircpy = { workspace = true, optional = true }
derive-new = { workspace = true }
fluent = { workspace = true }
hf-hub = { workspace = true }
http-body-util = { workspace = true, optional = true }
include_dir = { workspace = true }
once_cell = { workspace = true }
lazy_static = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
rstest = { workspace = true, optional = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true, features = ["derive"] }
tempfile = { workspace = true, optional = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = [
  "env-filter",
], optional = true }
thiserror = { workspace = true }
unic-langid = { workspace = true }
validator = { workspace = true, features = ["derive"] }

[dev-dependencies]
anyhow = { workspace = true }
anyhow_trace = { workspace = true }
axum-extra = { workspace = true }
ctor = { workspace = true }
dircpy = { workspace = true }
futures = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true, features = ["full"] }
pretty_assertions = { workspace = true }
rstest = { workspace = true }
serial_test = { workspace = true }
tempfile = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tokio = { workspace = true, features = ["full", "test-util"] }
tower = { workspace = true }
unic-langid = { workspace = true }


[features]
test-utils = ["rstest", "tempfile", "dircpy", "tracing-subscriber", "ctor", "http-body-util"]
