[package]
name = "objs"
version = "0.0.40-dev"
edition = "2021"

[dependencies]
errmeta_derive = { workspace = true }

axum = { workspace = true, features = ["json"] }
async-openai = { workspace = true }
byteorder = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
clap = { workspace = true, features = ["derive"] }
derive_builder = { workspace = true }
dircpy = { workspace = true, optional = true }
dirs = { workspace = true, optional = true }
derive-new = { workspace = true }
fs_extra = { workspace = true, optional = true }
fluent = { workspace = true }
hf-hub = { workspace = true }
http-body-util = { workspace = true, optional = true }
include_dir = { workspace = true }
once_cell = { workspace = true }
lazy_static = { workspace = true }
memmap2 = { workspace = true }

regex = { workspace = true }
reqwest = { workspace = true }
rstest = { workspace = true, optional = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true, features = ["derive"] }
tempfile = { workspace = true, optional = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["matchers", "once_cell", "regex", "tracing", "env-filter"], optional = true }
thiserror = { workspace = true }
unic-langid = { workspace = true }
utoipa = { workspace = true }
validator = { workspace = true, features = ["derive"] }

[dev-dependencies]
anyhow = { workspace = true }
anyhow_trace = { workspace = true }
axum-extra = { workspace = true }

dircpy = { workspace = true }
dirs = { workspace = true }
fs_extra = { workspace = true }
futures = { workspace = true }
http-body-util = { workspace = true }

pretty_assertions = { workspace = true }
rstest = { workspace = true }

tempfile = { workspace = true }
tracing-subscriber = { workspace = true, features = ["matchers", "once_cell", "regex", "tracing", "env-filter"] }
tokio = { workspace = true, features = ["full", "test-util"] }
tower = { workspace = true, features = ["util"] }
unic-langid = { workspace = true }


[features]
test-utils = [
  "dircpy",
  "dirs",
  "fs_extra",
  "http-body-util",
  "rstest",
  "tempfile",
  "tracing-subscriber",
]
