[package]
name = "objs"
version = "0.0.46-dev"
edition = "2021"

[dependencies]
errmeta_derive = { workspace = true }

axum = { workspace = true, features = ["json"] }
async-openai = { workspace = true }
byteorder = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
clap = { workspace = true, features = ["derive"] }
derive_builder = { workspace = true }
dircpy = { workspace = true, optional = true }
dirs = { workspace = true, optional = true }
derive-new = { workspace = true }
fs_extra = { workspace = true, optional = true }
hf-hub = { workspace = true }
http-body-util = { workspace = true, optional = true }
memmap2 = { workspace = true }
once_cell = { workspace = true }

regex = { workspace = true }
reqwest = { workspace = true }
sea-orm = { workspace = true, features = ["macros", "with-chrono", "with-json"] }
rstest = { workspace = true, optional = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true, features = ["derive"] }
tempfile = { workspace = true, optional = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["matchers", "once_cell", "regex", "tracing", "env-filter"], optional = true }
thiserror = { workspace = true }
utoipa = { workspace = true }
validator = { workspace = true, features = ["derive"] }
url.workspace = true
ulid.workspace = true

[dev-dependencies]
anyhow = { workspace = true }
anyhow_trace = { workspace = true }
axum-extra = { workspace = true }

dircpy = { workspace = true }
dirs = { workspace = true }
fs_extra = { workspace = true }
futures = { workspace = true }
http-body-util = { workspace = true }

pretty_assertions = { workspace = true }
rstest = { workspace = true }

tempfile = { workspace = true }
tracing-subscriber = { workspace = true, features = ["matchers", "once_cell", "regex", "tracing", "env-filter"] }
tokio = { workspace = true, features = ["full", "test-util"] }
tower = { workspace = true, features = ["util"] }


[features]
test-utils = [
  "dircpy",
  "dirs",
  "fs_extra",
  "http-body-util",
  "rstest",
  "tempfile",
  "tracing-subscriber",
]
