[package]
name = "routes_all"
version = "0.0.46-dev"
edition = "2021"

[dependencies]
objs = { workspace = true }
services = { workspace = true }
auth_middleware = { workspace = true }
server_core = { workspace = true }
routes_app = { workspace = true }
routes_oai = { workspace = true }

axum = { workspace = true }
include_dir = { workspace = true }
rstest = { workspace = true, optional = true }
tower-http = { workspace = true, features = ["cors", "trace"] }
tracing = { workspace = true }
serde_json = { workspace = true }
hyper-util = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true, features = ["axum", "vendored"] }

[dev-dependencies]
server_core = { workspace = true, features = ["test-utils"] }
services = { workspace = true, features = ["test-utils"] }
routes_app = { workspace = true, features = ["test-utils"] }

anyhow = { workspace = true }
rstest = { workspace = true }
mockall = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tower = { workspace = true, features = ["util"] }

[features]
test-utils = ["rstest", "routes_app/test-utils"]
