[package]
name = "routes_app"
version = "0.1.0"
edition = "2021"

[dependencies]
errmeta_derive = { workspace = true }
objs = { workspace = true }
services = { workspace = true }
commands = { workspace = true }
auth_middleware = { workspace = true }
server_core = { workspace = true }

axum = { workspace = true }
axum-extra = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
include_dir = { workspace = true }
jsonwebtoken = { workspace = true }
oauth2 = { workspace = true }
rstest = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["full"] }
thiserror = { workspace = true }
tower-sessions = { workspace = true }
validator = { workspace = true, features = ["derive"] }
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
services = { workspace = true, features = ["test-utils"] }
server_core = { workspace = true, features = ["test-utils"] }
auth_middleware = { workspace = true, features = ["test-utils"] }

anyhow = { workspace = true }
anyhow_trace = { workspace = true }
axum-test = { workspace = true }
hyper = { workspace = true, features = ["full"] }
maplit = { workspace = true }
mockall = { workspace = true }
mockito = { workspace = true }
pretty_assertions = { workspace = true }
rstest = { workspace = true }
serial_test = { workspace = true }
strfmt = { workspace = true }
tempfile = { workspace = true }
time = { workspace = true }
tokio = { workspace = true, features = ["full", "test-util"] }
tower = { workspace = true, features = ["util"] }
url = { workspace = true }

[features]
test-utils = ["rstest", "auth_middleware/test-utils"]
