[package]
name = "routes_app"
version = "0.0.45-dev"
edition = "2021"

[dependencies]
errmeta_derive = { workspace = true }
objs = { workspace = true }
routes_oai = { workspace = true }
services = { workspace = true }
commands = { workspace = true }
auth_middleware = { workspace = true }
server_core = { workspace = true }
async-openai = { workspace = true }

axum = { workspace = true }
axum-extra = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
derive_builder = { workspace = true }
derive-new = { workspace = true }
include_dir = { workspace = true }
jsonwebtoken = { workspace = true }
oauth2 = { workspace = true }
once_cell = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
rstest = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sha2 = { workspace = true }

tokio = { workspace = true, features = ["full"] }
thiserror = { workspace = true }
tower-sessions = { workspace = true }
tracing = { workspace = true }
validator = { workspace = true, features = ["derive"] }
utoipa = { workspace = true, features = ["axum_extras"] }
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
services = { workspace = true, features = ["test-utils"] }
server_core = { workspace = true, features = ["test-utils"] }
auth_middleware = { workspace = true, features = ["test-utils"] }
llama_server_proc = { workspace = true }

anyhow = { workspace = true }
anyhow_trace = { workspace = true }
axum-test = { workspace = true }
hyper = { workspace = true, features = ["full"] }
maplit = { workspace = true }
mockall = { workspace = true }
mockito = { workspace = true }
pretty_assertions = { workspace = true }
rstest = { workspace = true }
tempfile = { workspace = true }
time = { workspace = true }
tokio = { workspace = true, features = ["full", "test-util"] }
tower = { workspace = true, features = ["util"] }
url = { workspace = true }

[features]
test-utils = ["rstest", "auth_middleware/test-utils"]
