[package]
name = "routes_app"
version = "0.0.46-dev"
edition = "2021"

[dependencies]
errmeta_derive = { workspace = true }
objs = { workspace = true }
services = { workspace = true }
auth_middleware = { workspace = true }
server_core = { workspace = true }
async-openai = { workspace = true }

axum = { workspace = true }
axum-extra = { workspace = true }
base64 = { workspace = true }
futures-util = { workspace = true }
http = { workspace = true }
hyper-util = { workspace = true }
include_dir = { workspace = true }
chrono = { workspace = true }
derive_builder = { workspace = true }
derive-new = { workspace = true }
jsonwebtoken = { workspace = true }
oauth2 = { workspace = true }
once_cell = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
rstest = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sha2 = { workspace = true }

tokio = { workspace = true, features = ["full"] }
thiserror = { workspace = true }
tower-http = { workspace = true, features = ["cors", "trace"] }
tower-sessions = { workspace = true }
tracing = { workspace = true }
validator = { workspace = true, features = ["derive"] }
utoipa = { workspace = true, features = ["axum_extras"] }
utoipa-swagger-ui = { workspace = true, features = ["axum", "vendored"] }
url = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

# Optional deps for test-utils feature
anyhow = { workspace = true, optional = true }
maplit = { workspace = true, optional = true }
tempfile = { workspace = true, optional = true }
time = { workspace = true, optional = true }
reqwest = { workspace = true, features = ["json", "form"] }

[dev-dependencies]
routes_app = { path = ".", features = ["test-utils"] }
services = { workspace = true, features = ["test-utils"] }
server_core = { workspace = true, features = ["test-utils"] }
auth_middleware = { workspace = true, features = ["test-utils"] }
objs = { workspace = true, features = ["test-utils"] }
llama_server_proc = { workspace = true, features = ["test-utils"] }

anyhow = { workspace = true }
anyhow_trace = { workspace = true }
axum-test = { workspace = true }
hyper = { workspace = true, features = ["full"] }
maplit = { workspace = true }
mockall = { workspace = true }
mockito = { workspace = true }
pretty_assertions = { workspace = true }
reqwest = { workspace = true }
rstest = { workspace = true }
serial_test = { workspace = true }
sqlx = { workspace = true }
tempfile = { workspace = true }
time = { workspace = true }
tokio = { workspace = true, features = ["full", "test-util"] }
tower = { workspace = true, features = ["util"] }

[features]
test-utils = [
  "rstest",
  "anyhow",
  "maplit",
  "tempfile",
  "time",
  "auth_middleware/test-utils",
  "services/test-utils",
  "server_core/test-utils",
]
