[package]
name = "routes_oai"
version = "0.1.0"
edition = "2021"

[dependencies]
llama-server-bindings = { workspace = true }
errmeta_derive = { workspace = true }
objs = { workspace = true }

async-openai = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
chrono = { workspace = true }
derive_builder = { workspace = true }
derive-new = { workspace = true }
futures-util = { workspace = true }
include_dir = { workspace = true }
mime = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
server_core = { workspace = true }
services = { workspace = true }
strum = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true }
tracing = { workspace = true }
validator = { workspace = true, features = ["derive"] }

[dev-dependencies]
objs = { workspace = true, features = ["test-utils"] }
server_core = { workspace = true, features = ["test-utils"] }
services = { workspace = true, features = ["test-utils"] }
auth_middleware = { workspace = true, features = ["test-utils"] }

anyhow = { workspace = true }
anyhow_trace = { workspace = true }
mockall = { workspace = true }
pretty_assertions = { workspace = true }
reqwest = { workspace = true }
rstest = { workspace = true }
serde_json = { workspace = true, features = ["preserve_order"] }
tokio = { workspace = true, features = ["full", "test-util"] }
tower = { workspace = true, features = ["util"] }

[features]
test-utils = []
