[package]
name = "routes_oai"
version = "0.0.46-dev"
edition = "2021"

[dependencies]
errmeta_derive = { workspace = true }
objs = { workspace = true }

async-openai = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
chrono = { workspace = true }
futures-util = { workspace = true }
http = { workspace = true }
rstest = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
server_core = { workspace = true }
services = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
validator = { workspace = true, features = ["derive"] }
utoipa = { workspace = true }

[dev-dependencies]
objs = { workspace = true, features = ["test-utils"] }
server_core = { workspace = true, features = ["test-utils"] }
services = { workspace = true, features = ["test-utils"] }
llama_server_proc = { workspace = true, features = ["test-utils"] }

anyhow = { workspace = true }
anyhow_trace = { workspace = true }
http = { workspace = true }
mockall = { workspace = true }
pretty_assertions = { workspace = true }
reqwest = { workspace = true }
rstest = { workspace = true }
serde_json = { workspace = true, features = ["preserve_order"] }
tokio = { workspace = true, features = ["full", "test-util"] }
tower = { workspace = true, features = ["util"] }

[features]
test-utils = ["rstest"]
