[package]
name = "server_app"
version = "0.1.0"
edition = "2021"

[dependencies]
errmeta_derive = { workspace = true }
llama_server_proc = { workspace = true }
objs = { workspace = true }
services = { workspace = true }
commands = { workspace = true }
server_core = { workspace = true }
routes_all = { workspace = true }

async-openai = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
derive-new = { workspace = true }
dialoguer = { workspace = true, features = ["history"] }
futures-util = { workspace = true }
include_dir = { workspace = true }
indicatif = { workspace = true }
mockall = { workspace = true, optional = true }
reqwest = { workspace = true }
rstest = { workspace = true, optional = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tower-serve-static = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
objs = { workspace = true, features = ["test-utils"] }
services = { workspace = true, features = ["test-utils"] }
routes_all = { workspace = true, features = ["test-utils"] }
server_core = { workspace = true, features = ["test-utils"] }

anyhow = { workspace = true }
anyhow_trace = { workspace = true }
mockall = { workspace = true }
pretty_assertions = { workspace = true }
rand = { workspace = true }
rstest = { workspace = true }

[features]
test-utils = ["rstest", "mockall", "routes_all/test-utils"]
