[package]
name = "server_app"
version = "0.0.46-dev"
edition = "2021"

[dependencies]
errmeta_derive = { workspace = true }
llama_server_proc = { workspace = true }
objs = { workspace = true }
services = { workspace = true }
server_core = { workspace = true }
routes_app = { workspace = true }
async-openai = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
derive-new = { workspace = true }
dialoguer = { workspace = true, features = ["history"] }
futures-util = { workspace = true }
include_dir = { workspace = true }
indicatif = { workspace = true }
mockall = { workspace = true, optional = true }
reqwest = { workspace = true }
rstest = { workspace = true, optional = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tower-serve-static = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
objs = { workspace = true, features = ["test-utils"] }
services = { workspace = true, features = ["test-utils"] }
routes_app = { workspace = true, features = ["test-utils"] }
server_core = { workspace = true, features = ["test-utils"] }
auth_middleware = { workspace = true, features = ["test-utils"] }
llama_server_proc = { workspace = true, features = ["test-utils"] }

anyhow = { workspace = true }
anyhow_trace = { workspace = true }
cookie = { workspace = true }
dirs = { workspace = true }
dotenv = { workspace = true }
fs_extra = { workspace = true }
maplit = { workspace = true }
mockall = { workspace = true }
pretty_assertions = { workspace = true }
rand = { workspace = true }
rstest = { workspace = true }
serial_test = { workspace = true }
sqlx = { workspace = true, features = ["runtime-tokio", "sqlite"] }
tempfile = { workspace = true }
time = { workspace = true }
tower-sessions = { workspace = true }

[features]
test-utils = ["rstest", "mockall", "routes_app/test-utils"]
